--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ categories = ["mathematics", "science"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rayon = "1.3.1"
 rand = "0.7"
 thiserror = "1.0.20"
+opensrdk-linear-algebra = { git = "https://github.com/OpenSRDK/linear-algebra-rs.git" }
