--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,9 @@ categories = ["mathematics", "science"]
 
 [dependencies]
 rand = "0.7"
+rayon = "1.3.1"
 thiserror = "1.0.20"
 opensrdk-linear-algebra = { git = "https://github.com/OpenSRDK/linear-algebra-rs.git" }
+
+[dev-dependencies]
+openblas-src = "0.9"
