--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,5 @@ thiserror = "1.0.20"
 opensrdk-linear-algebra = { git = "https://github.com/OpenSRDK/linear-algebra-rs.git" }
 
 [dev-dependencies]
-openblas-src = "0.9"
+blas-src = { version = "0.6", features = ["intel-mkl"] } 
+lapack-src = { version = "0.6", features = ["intel-mkl"] }
