--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["mathematics", "science"]
 rand = "0.7"
 rayon = "1.3.1"
 thiserror = "1.0.20"
-opensrdk-linear-algebra = { git = "https://github.com/OpenSRDK/linear-algebra-rs.git" }
+opensrdk-linear-algebra = "0.5.0"
 
 [dev-dependencies]
 blas-src = { version = "0.6", features = ["intel-mkl"] } 
